--- a/.fanpage.html
+++ b/.fanpage.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Michael Buble</h1>
-        <img src="images/michael_buble-pic.jpg" alt="Michael Buble stairing at you!">
+        <img src="images/michael_buble_pic" alt="Michael Buble stairing at you.">
         <h2>Bio</h2>
         <p>
         Michael Buble songwriter and actor. He has won four Grammy Awards and multiple Juno Awards. His first album reached the top ten in the United Kingdom and in Canada. His 2005 album, It's Time, and his 2007 album, Call Me Irresponsible, were very successful around the world, reaching number one on the Canadian album chart, the U.S. Billboard 200 chart, the Australian ARIA Albums Chart, and the European charts. Bublé has sold thirty million albums worldwide.
