--- a/.fanpage.html
+++ b/.fanpage.html
@@ -1,21 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
+
         <title>Michael Buble!</title>
+        <link rel="shortcut icon" href=C:\Users\nickp\Desktop\images\favicon.ico type="C:\Users\nickp\Desktop\images\favicon.ico">
+        <link rel="icon" href="C:\Users\nickp\Desktop\images\favicon.ico" type="C:\Users\nickp\Desktop\images\favicon.ico">
     </head>
+
     <body>
-        <h1>Michael Buble</h1>
-        <img src="images/michael_buble_pic" alt="Michael Buble stairing at you.">
+        <h1>Michale Buble</h1>
+        <img src="C:\Users\nickp\Desktop\images\michael_buble_pic.jpg" alt="Michael Buble stairing at you.">
         <h2>Bio</h2>
-        <p>
-        Michael Buble songwriter and actor. He has won four Grammy Awards and multiple Juno Awards. His first album reached the top ten in the United Kingdom and in Canada. His 2005 album, It's Time, and his 2007 album, Call Me Irresponsible, were very successful around the world, reaching number one on the Canadian album chart, the U.S. Billboard 200 chart, the Australian ARIA Albums Chart, and the European charts. Bublé has sold thirty million albums worldwide.
+
+        <p>Michael Buble songwriter and actor. He has won four Grammy Awards and multiple Juno Awards. His first album reached the top ten in the United Kingdom and in Canada. His 2005 album, It's Time, and his 2007 album, Call Me Irresponsible, were very successful around the world, reaching number one on the Canadian album chart, the U.S. Billboard 200 chart, the Australian ARIA Albums Chart, and the European charts. Bublé has sold thirty million albums worldwide. </p>
+
+        <p>Bublé became an Italian citizen in 2005. He has been married to Argentine actress Luisana Lopilato since 2011. They have three children (two sons and a daughter). In 2016, his eldest son, Noah, was diagnosed with cancer but was in remission two years later.</p>
+
+        <p>Check him out on Facebook and youtube by clicking on the following the links below</p>
+        <p>Facebook: <a href="https://www.facebook.com/MichaelBuble/?ref=br_rs" target="_blank">https://www.facebook.com/MichaelBuble/?ref=br_rs</a>
+        <br>Youtube:  <a href="https://www.youtube.com/user/MichaelBubleTV" target="_blank">https://www.youtube.com/user/MichaelBubleTV</a>
         </p>
-        <p>
-        Bublé became an Italian citizen in 2005. He has been married to Argentine actress Luisana Lopilato since 2011. They have three children (two sons and a daughter). In 2016, his eldest son, Noah, was diagnosed with cancer but was in remission two years later.
-        </p>
+
         <h3>Favorite Song</h3>
+
         <p>"Always on my mind"</p>
-        <iframe width="1221" height="672" src="https://www.youtube.com/embed/7dNVdAiGx5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <iframe width="540" height="304" src="https://www.youtube.com/embed/7dNVdAiGx5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <h4>Tour Dates</h4>
+
+        <p>
+            <table>
+                <tr>
+                 <th>Date</th>
+                 <th>Location</th>
+                 <th>Tickets</th>
+                </tr>
+                <tr>
+                 <td>Dec 09</td>
+                 <td>The O2 London, UK</td>
+                 <td><a href="https://www.theo2.co.uk/events/detail/michael-buble-1" target="_blank">Tickets</a></td>
+                </tr>
+                <tr>
+                 <td>Dec 10</td>
+                 <td>The O2 London, UK</td>
+                 <td><a href="https://www.theo2.co.uk/events/detail/michael-buble-2" target="_blank">Tickets</a></td>
+                </tr>
+                <tr>
+                 <td>Feb 01</td>
+                 <td>Mission Estate Winery Napier, New Zealand</td>
+                 <td><a href="http://bit.ly/MichaelBuble2020" target="_blank">Tickets</a></td>
+                </tr>
+                <tr>
+                 <td>Feb 04</td>
+                 <td>Brisbane Entertainment Centre Brisbane, QLD, Australia</td>
+                 <td><a href="https://premier.ticketek.com.au/shows/show.aspx?sh=MICHAELB20" target="_blank">Tciekts</a></td>
+                </tr>
+               </table>
+        </p>
     </body>
 </html>
